<resources>

    <string name="app_name">Basic Order UI</string>

    <string name="pizza_beef_cheese">Pizza Beef Cheese</string>
    <string name="gr_800">800 gr</string>
    <string name="minute_20">20 min</string>
    <string name="kkal_355">355 kkal</string>
    <string name="energy">Energy</string>
    <string name="weight">Weight</string>
    <string name="delivery">Delivery</string>
    <string name="description_beefCheesePizza">Meat lover, get ready to meet your match!</string>
    <string name="button_add_chart">Add to chart</string>
    <string name="money_symbol">$</string>
    <string name="price_pizza_beef_cheese">5.98</string>

</resources>