<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/title_margin_top"
    android:text="@string/pizza_beef_cheese"
    android:textColor="@color/red_dark"
    android:textSize="@dimen/title_text_size"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_marginTop="@dimen/image_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_beef_cheese_png" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kkal_gr_min_margin_top"
        android:text="@string/gr_800"
        android:textColor="@color/black_soft"
        android:textSize="@dimen/kkal_gr_min_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kkal_gr_min_margin_top"
        android:layout_marginEnd="@dimen/kkal_gr_min_margin_end"
        android:text="@string/kkal_355"
        android:textColor="@color/black_soft"
        android:textSize="@dimen/kkal_gr_min_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/kkal_gr_min_margin_start"
        android:layout_marginTop="@dimen/kkal_gr_min_margin_top"
        android:text="@string/minute_20"
        android:textColor="@color/black_soft"
        android:textSize="@dimen/kkal_gr_min_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/energy_weight_delivery_margin_top"
        android:text="@string/weight"
        android:textColor="@color/red_dark"
        android:textSize="@dimen/energy_weight_delivery_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/energy_weight_delivery_margin_top"
        android:text="@string/energy"
        android:textColor="@color/red_dark"
        android:textSize="@dimen/energy_weight_delivery_text_size"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/energy_weight_delivery_margin_top"
        android:text="@string/delivery"
        android:textColor="@color/red_dark"
        android:textSize="@dimen/energy_weight_delivery_text_size"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="@dimen/match_parent"
        android:layout_height="@dimen/wrap_content"
        android:layout_marginStart="@dimen/description_margin_start"
        android:layout_marginTop="@dimen/description_margin_top"
        android:layout_marginEnd="@dimen/description_margin_end"
        android:gravity="center"
        android:text="@string/description_beefCheesePizza"
        android:textColor="@color/grey"
        android:textSize="@dimen/description_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/wrap_content"
        android:layout_height="@dimen/wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_marginEnd="@dimen/button_margin_end"
        android:background="@drawable/buttonshape"
        android:text="@string/button_add_chart"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/wrap_content"
        android:layout_height="@dimen/wrap_content"
        android:layout_marginEnd="@dimen/price_margin_end"
        android:text="@string/price_pizza_beef_cheese"
        android:textColor="@color/red_dark"
        android:textSize="@dimen/price_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/wrap_content"
        android:layout_height="@dimen/wrap_content"
        android:layout_marginEnd="@dimen/price_symbol_margin_end"
        android:text="@string/money_symbol"
        android:textColor="@color/red_dark"
        android:textSize="@dimen/price_symbol_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />



</androidx.constraintlayout.widget.ConstraintLayout>